--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".NewEmployee"></activity>
         <activity android:name=".Profile" />
-        <activity android:name=".MainApp" />
+        <activity android:name=".MainApp"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".SignUpPage" />
         <activity android:name=".LoginPage">
             <intent-filter>
