--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.0.1'
 
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
