--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityTransaction"></activity>
+        <activity android:name=".ActivityBudgeting"></activity>
+        <activity android:name=".ActivityTransaction" />
         <activity android:name=".NewEmployee" />
         <activity android:name=".Profile" />
         <activity
