--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_icon"
+        android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityBudgeting"></activity>
+        <activity android:name=".ActivityDetailReport"></activity>
+        <activity android:name=".ActivitySumReport" />
+        <activity android:name=".ActivityBudgeting" />
         <activity android:name=".ActivityTransaction" />
         <activity android:name=".NewEmployee" />
         <activity android:name=".Profile" />
