--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
     implementation 'com.github.MdFarhanRaja:SearchableSpinner:2.0'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
