--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityMaster"></activity>
+        <activity android:name=".ActivityChartYearly"></activity>
+        <activity android:name=".ActivityMaster" />
         <activity android:name=".ActivityChartMonthly" />
         <activity android:name=".ActivityDetailReport" />
         <activity android:name=".ActivitySumReport" />
