--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "xyz.voltwilz.employee"
+        applicationId "xyz.voltwilz.econtact"
         minSdkVersion 23
 
         targetSdkVersion 29
